--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
     <nav >
-        <span><img width="53" src="./media/images/logo-1.png" alt=""></span>
+        <span><img width="53" src="./media/images/logo.svg" alt=""></span>
         <div>
             <button>English</button>
             <button>Sign In</button>
