--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<!--THIS IS MY FIRST NETFLIX CLONE USING HTML AND CSS THIS CLONE DOESNOT HAVE ANY RELATIVITT WITH REAL NETFLIX-->
+<!--THIS IS MY FIRST NETFLIX CLONE USING HTML AND CSS THIS CLONE DOESNOT HAVE ANY RELATION WITH REAL NETFLiX-->
     <div class="main">
         <nav>
             <span><img width="53" src="./media/images/logo.svg" alt=""></span>
